rename dir-listing and modified

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+GIT ALL THE THINGS!
 Desktop
 Documents
 Downloads
@@ -9,7 +10,6 @@ Music
 Pictures
 Public
 aop
-cloudfoundryws
 foo
 foo.csv
 foo.sh
